# scikit_build_example

./: CMakeLists.txt  pyproject.toml
include/foobar/: foobar.h
python/: ext.cpp
python/foobar/: __init__.py  core.py  test.py
src/: foobar.cc
